force-app/main/default/objects/Case/fields/Academic_Session__c.field-meta.xml
<CustomField>
    <fullName>Academic_Session__c</fullName>
    <label>Academic Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>