force-app/main/default/objects/Case/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Term</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcademicTerm.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>