force-app/main/default/objects/Case/fields/Accommodation_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Refund_Amount__c</fullName>
    <label>Accommodation Refund Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>