force-app/main/default/objects/Case/fields/Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Type__c</fullName>
    <formula>TEXT(Program_Enrollment__r.Accomodation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accomodation Type</label>
    <type>Text</type>
</CustomField>