force-app/main/default/objects/Case/fields/Account_number__c.field-meta.xml
<CustomField>
    <fullName>Account_number__c</fullName>
    <label>Account number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>