force-app/main/default/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warned</fullName>
            </value>
            <value>
                <fullName>Block Approved</fullName>
            </value>
            <value>
                <fullName>Wellbeing Counselling Scheduled</fullName>
            </value>
            <value>
                <fullName>Resolved and Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>