force-app/main/default/objects/Case/fields/Actual_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Exit_Date__c</fullName>
    <label>Actual Exit Date</label>
    <type>Date</type>
</CustomField>