force-app/main/default/objects/Case/fields/Allocated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Budget__c</fullName>
    <formula>Academic_Term__r.Allocated_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>