force-app/main/default/objects/Case/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>