force-app/main/default/objects/Case/fields/ASA_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ASA_Remarks__c</fullName>
    <label>ASA Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>