force-app/main/default/objects/Case/fields/ASA_SA_Cleared__c.field-meta.xml
<CustomField>
    <fullName>ASA_SA_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASA Student Affairs Cleared</label>
    <type>Checkbox</type>
</CustomField>