force-app/main/default/objects/Case/fields/ASA_SA_Cleared_By__c.field-meta.xml
<CustomField>
    <fullName>ASA_SA_Cleared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASA SA Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_ASA_SA_Cleared_By</relationshipName>
    <type>Lookup</type>
</CustomField>