force-app/main/default/objects/Case/fields/ASA_SA_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>ASA_SA_Cleared_Date__c</fullName>
    <label>ASA SA Cleared Date</label>
    <type>DateTime</type>
</CustomField>