force-app/main/default/objects/Case/fields/Assigned_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>