force-app/main/default/objects/Case/fields/Attendance_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Exception_Reason__c</fullName>
    <label>Attendance Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Exigency</fullName>
            </value>
            <value>
                <fullName>Medical Emergency in Immediate Family</fullName>
            </value>
            <value>
                <fullName>Loss/Bereavement</fullName>
            </value>
            <value>
                <fullName>Hardship/Trauma</fullName>
            </value>
            <value>
                <fullName>Approved Case Competitions</fullName>
            </value>
            <value>
                <fullName>Professional Certification Exams</fullName>
            </value>
            <value>
                <fullName>National/International Sports Tournaments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>