force-app/main/default/objects/Case/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>