force-app/main/default/objects/Case/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>