force-app/main/default/objects/Case/fields/Block_Approved__c.field-meta.xml
<CustomField>
    <fullName>Block_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Approved</label>
    <type>Checkbox</type>
</CustomField>