force-app/main/default/objects/Case/fields/Budget_Ask__c.field-meta.xml
<CustomField>
    <fullName>Budget_Ask__c</fullName>
    <label>Budget Ask (₹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>