force-app/main/default/objects/Case/fields/CaseTeamMember__c.field-meta.xml
<CustomField>
    <fullName>CaseTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseTeamMember</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>