force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bidding (Registro)</fullName>
            </value>
            <value>
                <fullName>Incoming &amp; Outgoing Student Exchange (Registro)</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Events &amp; Budgets</fullName>
            </value>
            <value>
                <fullName>Posts</fullName>
            </value>
            <value>
                <fullName>Special Interest Group Request</fullName>
            </value>
            <value>
                <fullName>Awards Management - Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>