force-app/main/default/objects/Case/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <label>CGPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>