force-app/main/default/objects/Case/fields/Charge_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Charge_Drivers__c</fullName>
    <label>Charge Drivers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>