force-app/main/default/objects/Case/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <formula>Program_Enrollment__r.Check_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Date</label>
    <type>Date</type>
</CustomField>