force-app/main/default/objects/Case/fields/Cheque_DD_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Number__c</fullName>
    <label>Cheque DD Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>