force-app/main/default/objects/Case/fields/Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No__c</fullName>
    <label>Cheque No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>