force-app/main/default/objects/Case/fields/Closure_Blocker_Count__c.field-meta.xml
<CustomField>
    <fullName>Closure_Blocker_Count__c</fullName>
    <label>Closure Blocker Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>