force-app/main/default/objects/Case/fields/Closure_Summary_Generated__c.field-meta.xml
<CustomField>
    <fullName>Closure_Summary_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closure Summary Generated</label>
    <type>Checkbox</type>
</CustomField>