force-app/main/default/objects/Case/fields/Closure_Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Closure_Validated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closure Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>ClosureValidatedByCases</relationshipName>
    <type>Lookup</type>
</CustomField>