force-app/main/default/objects/Case/fields/Closure_Validated_On__c.field-meta.xml
<CustomField>
    <fullName>Closure_Validated_On__c</fullName>
    <label>Closure Validated On</label>
    <type>DateTime</type>
</CustomField>