force-app/main/default/objects/Case/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>