force-app/main/default/objects/Case/fields/Completed_Term__c.field-meta.xml
<CustomField>
    <fullName>Completed_Term__c</fullName>
    <label>Completed Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>