force-app/main/default/objects/Case/fields/Confirmed_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Exit_Date__c</fullName>
    <label>Confirmed Exit Date</label>
    <type>Date</type>
</CustomField>