force-app/main/default/objects/Case/fields/Course_Confirmation_Form__c.field-meta.xml
<CustomField>
    <fullName>Course_Confirmation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Confirmation Form</label>
    <type>Checkbox</type>
</CustomField>