force-app/main/default/objects/Case/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>