force-app/main/default/objects/Case/fields/Current_Degree__c.field-meta.xml
<CustomField>
    <fullName>Current_Degree__c</fullName>
    <formula>Contact.Current_Degree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Degree</label>
    <type>Text</type>
</CustomField>