force-app/main/default/objects/Case/fields/Date_of_Absence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Absence__c</fullName>
    <label>Date of Absence</label>
    <type>Date</type>
</CustomField>