force-app/main/default/objects/Case/fields/Department_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Department_Remarks__c</fullName>
    <label>Department Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>