force-app/main/default/objects/Case/fields/Deposit_flags__c.field-meta.xml
<CustomField>
    <fullName>Deposit_flags__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit flags</label>
    <type>Checkbox</type>
</CustomField>