force-app/main/default/objects/Case/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <description>Primary destination country for this travel</description>
    <inlineHelpText>Type the country name (e.g., India, USA).</inlineHelpText>
    <label>Destination Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>