force-app/main/default/objects/Case/fields/Dispatch_Address__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Address__c</fullName>
    <description>Address to dispatch documents</description>
    <inlineHelpText>Provide the complete dispatch address.</inlineHelpText>
    <label>Dispatch Address</label>
    <type>TextArea</type>
</CustomField>