force-app/main/default/objects/Case/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <label>Dispatch Date</label>
    <type>DateTime</type>
</CustomField>