force-app/main/default/objects/Case/fields/Dispatch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Mode__c</fullName>
    <label>Dispatch Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>