force-app/main/default/objects/Case/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Notes__c</fullName>
    <label>Dispatch Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>