force-app/main/default/objects/Case/fields/Dispatched_By__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_By__c</fullName>
    <label>Dispatched By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Dispatched By)</relationshipLabel>
    <relationshipName>Cases_Dispatched_By</relationshipName>
    <type>Lookup</type>
</CustomField>