force-app/main/default/objects/Case/fields/Dispatched_By_User__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_By_User__c</fullName>
    <label>Dispatched By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Dispatched By User)</relationshipLabel>
    <relationshipName>Cases_Dispatched_By_User</relationshipName>
    <type>Lookup</type>
</CustomField>