force-app/main/default/objects/Case/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Dean’s</fullName>
            </value>
            <value>
                <fullName>Merit</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Scholar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>