force-app/main/default/objects/Case/fields/Evaluation_Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Triggered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>EvaluationTriggeredByCases</relationshipName>
    <type>Lookup</type>
</CustomField>