force-app/main/default/objects/Case/fields/Evaluation_Triggered_On__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Triggered_On__c</fullName>
    <label>Evaluation Triggered On</label>
    <type>DateTime</type>
</CustomField>