force-app/main/default/objects/Case/fields/Event_Contact__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact__c</fullName>
    <label>Event Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>