force-app/main/default/objects/Case/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>Url</type>
</CustomField>