force-app/main/default/objects/Case/fields/Exact_Dates__c.field-meta.xml
<CustomField>
    <fullName>Exact_Dates__c</fullName>
    <label>Exact Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>