force-app/main/default/objects/Case/fields/Exception_Flag__c.field-meta.xml
<CustomField>
    <fullName>Exception_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Flag</label>
    <type>Checkbox</type>
</CustomField>