force-app/main/default/objects/Case/fields/Exception_Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Exception_Pending_Count__c</fullName>
    <label>Exception Pending Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>