force-app/main/default/objects/Case/fields/Exchange_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Coordinator_Email__c</fullName>
    <label>Exchange Coordinator Email</label>
    <type>Email</type>
</CustomField>