force-app/main/default/objects/Case/fields/Exchange_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Coordinator_Name__c</fullName>
    <label>Exchange Coordinator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>