force-app/main/default/objects/Case/fields/Exchange_School_Home__c.field-meta.xml
<CustomField>
    <fullName>Exchange_School_Home__c</fullName>
    <formula>Program_Enrollment__r.Exchange_School__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange School (Home Institution)</label>
    <type>Text</type>
</CustomField>