force-app/main/default/objects/Case/fields/Exchange_School_Partner__c.field-meta.xml
<CustomField>
    <fullName>Exchange_School_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange School (Partner)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exchange Cases (Partner)</relationshipLabel>
    <relationshipName>Exchange_Cases_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>