force-app/main/default/objects/Case/fields/Expected_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Headcount__c</fullName>
    <label>Expected Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>