force-app/main/default/objects/Case/fields/Fee_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Fee_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Applicable</label>
    <type>Checkbox</type>
</CustomField>