force-app/main/default/objects/Case/fields/Final_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Graduation_Date__c</fullName>
    <label>Final Graduation Date</label>
    <type>Date</type>
</CustomField>