force-app/main/default/objects/Case/fields/Finalize_Population__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Population__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalize Population</label>
    <type>Checkbox</type>
</CustomField>