force-app/main/default/objects/Case/fields/Finance_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Finance_Cleared__c</fullName>
    <label>Finance Cleared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Partially Cleared</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>