force-app/main/default/objects/Case/fields/Finance_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Cleared_Date__c</fullName>
    <label>Finance Cleared Date</label>
    <type>DateTime</type>
</CustomField>