force-app/main/default/objects/Case/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <label>Finance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>