force-app/main/default/objects/Case/fields/FinanceL1__c.field-meta.xml
<CustomField>
    <fullName>FinanceL1__c</fullName>
    <label>FinanceL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>