force-app/main/default/objects/Case/fields/FinancialStatement__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Statement</label>
    <type>Checkbox</type>
</CustomField>