force-app/main/default/objects/Case/fields/FirstCaseAssignee__c.field-meta.xml
<CustomField>
    <fullName>FirstCaseAssignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FirstCaseAssignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>