force-app/main/default/objects/Case/fields/From_Term__c.field-meta.xml
<CustomField>
    <fullName>From_Term__c</fullName>
    <label>From_Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>