force-app/main/default/objects/Case/fields/Grading_Scale_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Grading_Scale_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading Scale Uploaded</label>
    <type>Checkbox</type>
</CustomField>