force-app/main/default/objects/Case/fields/Graduation_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Audit_Date__c</fullName>
    <label>Graduation Audit Date</label>
    <type>Date</type>
</CustomField>