force-app/main/default/objects/Case/fields/Graduation_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Audit_Notes__c</fullName>
    <label>Graduation Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>