force-app/main/default/objects/Case/fields/Graduation_Date_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date_Change_Reason__c</fullName>
    <label>Graduation Date Change Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>