force-app/main/default/objects/Case/fields/Graduation_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Exchange__c</fullName>
    <label>Graduation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Year</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>