force-app/main/default/objects/Case/fields/HCC_Check__c.field-meta.xml
<CustomField>
    <fullName>HCC_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether HCC check is completed</description>
    <inlineHelpText>Tick if HCC check has been completed/verified.</inlineHelpText>
    <label>HCC Check</label>
    <type>Checkbox</type>
</CustomField>