force-app/main/default/objects/Case/fields/Home_Institution_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Home_Institution_Contact_Email__c</fullName>
    <label>Home Institution Contact Email</label>
    <type>Email</type>
</CustomField>