force-app/main/default/objects/Case/fields/Home_Institution_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Institution_Contact_Name__c</fullName>
    <label>Home Institution Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>