force-app/main/default/objects/Case/fields/Host_Body__c.field-meta.xml
<CustomField>
    <fullName>Host_Body__c</fullName>
    <label>Host Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>SIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>