force-app/main/default/objects/Case/fields/In_Absentia__c.field-meta.xml
<CustomField>
    <fullName>In_Absentia__c</fullName>
    <label>In Absentia / In Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Absentia</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>