force-app/main/default/objects/Case/fields/ISB_Installment__c.field-meta.xml
<CustomField>
    <fullName>ISB_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISB Installment</label>
    <referenceTo>ISB_Installment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>