force-app/main/default/objects/Case/fields/IT_Cleared__c.field-meta.xml
<CustomField>
    <fullName>IT_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Cleared</label>
    <type>Checkbox</type>
</CustomField>