force-app/main/default/objects/Case/fields/IT_Cleared_By__c.field-meta.xml
<CustomField>
    <fullName>IT_Cleared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_IT_Cleared_By</relationshipName>
    <type>Lookup</type>
</CustomField>