force-app/main/default/objects/Case/fields/IT_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Cleared_Date__c</fullName>
    <label>IT Cleared Date</label>
    <type>DateTime</type>
</CustomField>