force-app/main/default/objects/Case/fields/Learning_Course__c.field-meta.xml
<CustomField>
    <fullName>Learning_Course__c</fullName>
    <label>Learning Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>