force-app/main/default/objects/Case/fields/Linked_Fee__c.field-meta.xml
<CustomField>
    <fullName>Linked_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Fee</label>
    <referenceTo>ISB_Fee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>