force-app/main/default/objects/Case/fields/LOA_Type__c.field-meta.xml
<CustomField>
    <fullName>LOA_Type__c</fullName>
    <label>LOA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TermWise</fullName>
                <label>Term Wise</label>
            </value>
            <value>
                <fullName>Full Year</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>