force-app/main/default/objects/Case/fields/loan_flag__c.field-meta.xml
<CustomField>
    <fullName>loan_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>loan flag</label>
    <type>Checkbox</type>
</CustomField>